src/objects/Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Average_Age__c</fullName>
        <formula>If(Completed__c &gt;0,Total_Age__c /   Completed__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cohort_to_Date_FY_10__c</fullName>
        <formula>If (

OR(Reference_Name__c = &apos;Fit Assessment&apos;,Reference_Name__c = &apos;EOI&apos;),  
FY10_Completed__c  + FY10_Ended__c  + FY_10_Current__c, FY10_Completed__c  +  FY_10_Current__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY10 Cohort to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cohort_to_Date__c</fullName>
        <formula>If (

OR(Reference_Name__c = &apos;Fit Assessment&apos;,Reference_Name__c = &apos;EOI&apos;, Reference_Name__c = &apos;Evaluation&apos;), Completed__c +  Current__c +  Ended__c ,Completed__c +  Current__c

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Records currently in the stage plus records that have successfully exited the stage</inlineHelpText>
        <label>FY09 Cohort to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <label>FY09 Completed</label>
        <summaryFilterItems>
            <field>Tracking_Details__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Tracking_Details__c.Reporting_Year__c</field>
            <operation>equals</operation>
            <value>FY 09</value>
        </summaryFilterItems>
        <summaryForeignKey>Tracking_Details__c.Tracking__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <label>FY09 Current</label>
        <summaryFilterItems>
            <field>Tracking_Details__c.Status__c</field>
            <operation>equals</operation>
            <value>Current</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Tracking_Details__c.Reporting_Year__c</field>
            <operation>equals</operation>
            <value>FY 09</value>
        </summaryFilterItems>
        <summaryForeignKey>Tracking_Details__c.Tracking__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dash_Cohort_to_Date__c</fullName>
        <inlineHelpText>For VF Dashboard Only</inlineHelpText>
        <label>Dash Cohort to Date</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dash_Completed__c</fullName>
        <inlineHelpText>For use on Dashboard VF pages</inlineHelpText>
        <label>Dash Completed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dash_Current__c</fullName>
        <inlineHelpText>For use on Dashboard VF pages</inlineHelpText>
        <label>Dash Current</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dash_Ended__c</fullName>
        <inlineHelpText>For use on Dashboard VF pages</inlineHelpText>
        <label>Dash Ended</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dash_Table__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show in Dash Table?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Stage__c</fullName>
        <formula>text(Display_Order__c)  &amp;&quot; : &quot; &amp; Name</formula>
        <label>Display Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ended__c</fullName>
        <label>FY09 Ended</label>
        <summaryFilterItems>
            <field>Tracking_Details__c.Status__c</field>
            <operation>equals</operation>
            <value>Ended</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Tracking_Details__c.Reporting_Year__c</field>
            <operation>equals</operation>
            <value>FY 09</value>
        </summaryFilterItems>
        <summaryForeignKey>Tracking_Details__c.Tracking__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FY10_Completed__c</fullName>
        <label>FY10 Completed</label>
        <summaryFilterItems>
            <field>Tracking_Details__c.Reporting_Year__c</field>
            <operation>equals</operation>
            <value>FY 10</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Tracking_Details__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Tracking_Details__c.Tracking__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FY10_Ended__c</fullName>
        <label>FY10 Ended</label>
        <summaryFilterItems>
            <field>Tracking_Details__c.Reporting_Year__c</field>
            <operation>equals</operation>
            <value>FY 10</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Tracking_Details__c.Status__c</field>
            <operation>equals</operation>
            <value>Ended</value>
        </summaryFilterItems>
        <summaryForeignKey>Tracking_Details__c.Tracking__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FY_10_Current__c</fullName>
        <label>FY10 Current</label>
        <summaryFilterItems>
            <field>Tracking_Details__c.Reporting_Year__c</field>
            <operation>equals</operation>
            <value>FY 10</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Tracking_Details__c.Status__c</field>
            <operation>equals</operation>
            <value>Current</value>
        </summaryFilterItems>
        <summaryForeignKey>Tracking_Details__c.Tracking__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Financial_Year__c</fullName>
        <label>Financial Year</label>
        <picklist>
            <picklistValues>
                <fullName>FY 09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY 11</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Name__c</fullName>
        <description>To enable easy lookup against stage names, we can store the related lead/application stage in this field</description>
        <label>Reference Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_FY_10__c</fullName>
        <label>Target FY 10</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Age__c</fullName>
        <label>Total Age</label>
        <summarizedField>Tracking_Details__c.Age__c</summarizedField>
        <summaryFilterItems>
            <field>Tracking_Details__c.Age__c</field>
            <operation>greaterOrEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Tracking_Details__c.Tracking__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Completed__c</fullName>
        <formula>Completed__c  +  Ended__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Completed + Ended Records</inlineHelpText>
        <label>Total Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Tracking</label>
    <listViews>
        <fullName>All_Stages</fullName>
        <columns>NAME</columns>
        <columns>Current__c</columns>
        <columns>Cohort_to_Date__c</columns>
        <columns>Completed__c</columns>
        <columns>Ended__c</columns>
        <columns>Target__c</columns>
        <columns>Target_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Stages</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DashBoard_Stages</fullName>
        <columns>NAME</columns>
        <columns>Display_Stage__c</columns>
        <columns>Current__c</columns>
        <columns>Completed__c</columns>
        <columns>Cohort_to_Date__c</columns>
        <columns>Ended__c</columns>
        <columns>Target__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Dash_Table__c</columns>
        <columns>Target_FY_10__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Display_Order__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DashBoard Stages</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Leads</fullName>
        <columns>NAME</columns>
        <columns>Current__c</columns>
        <columns>Completed__c</columns>
        <columns>Cohort_to_Date__c</columns>
        <columns>Target__c</columns>
        <columns>Target_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Name__c</field>
            <operation>equals</operation>
            <value>EOI,Pride Lead</value>
        </filters>
        <label>Leads</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Stage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>